Added api endpoints

--- a/Trakt/Configuration/configPage.html
+++ b/Trakt/Configuration/configPage.html
@@ -154,7 +154,7 @@
 
                     var page = this;
 
-                    ApiClient.getAllUsers().done(function(users) {
+                    ApiClient.getUsers().done(function(users) {
 
                         TraktConfigurationPage.populateUsers(users);
 
