--- a/Trakt/Configuration/configPage.html
+++ b/Trakt/Configuration/configPage.html
@@ -4,6 +4,7 @@
     <title>Trakt Configuration</title>
 </head>
 <body>
+<!-- ReSharper disable UnknownCssClass -->
     <div id="traktConfigurationPage" data-role="page" class="page type-interior pluginConfigurationPage">
         <div data-role="content">
             <div class="content-primary">
@@ -40,6 +41,7 @@
             </div>
         </div>
 
+<!-- ReSharper disable UseOfImplicitGlobalInFunctionScope -->
         <script type="text/javascript">
 
             var TraktConfigurationPage =
@@ -149,7 +151,7 @@
                     }
                 };
 
-            $('#traktConfigurationPage').on('pageshow', function (event) {
+            $('#traktConfigurationPage').on('pageshow', function () {
 
                 Dashboard.showLoadingMsg();
 
@@ -165,7 +167,7 @@
                 });
             });
 
-            $('#traktConfigurationForm').on('submit', function (e) {
+            $('#traktConfigurationForm').on('submit', function () {
 
                 Dashboard.showLoadingMsg();
 
@@ -226,14 +228,12 @@
             **/
             function SHA1(msg) {
 
-                function rotate_left(n, s) {
+                function rotateLeft(n, s) {
                     var t4 = (n << s) | (n >>> (32 - s));
                     return t4;
-                }
+                };
 
-                ;
-
-                function lsb_hex(val) {
+                function lsbHex(val) {
                     var str = "";
                     var i;
                     var vh;
@@ -245,26 +245,22 @@
                         str += vh.toString(16) + vl.toString(16);
                     }
                     return str;
-                }
+                };
 
-                ;
-
-                function cvt_hex(val) {
+                function cvtHex(val) {
                     var str = "";
-                    var i;
+                    var j;
                     var v;
 
-                    for (i = 7; i >= 0; i--) {
-                        v = (val >>> (i * 4)) & 0x0f;
+                    for (j = 7; j >= 0; j--) {
+                        v = (val >>> (j * 4)) & 0x0f;
                         str += v.toString(16);
                     }
                     return str;
-                }
-
-                ;
+                };
 
 
-                function Utf8Encode(string) {
+                function utf8Encode(string) {
                     string = string.replace(/\r\n/g, "\n");
                     var utftext = "";
 
@@ -292,112 +288,114 @@
 
                 var blockstart;
                 var i, j;
-                var W = new Array(80);
-                var H0 = 0x67452301;
-                var H1 = 0xEFCDAB89;
-                var H2 = 0x98BADCFE;
-                var H3 = 0x10325476;
-                var H4 = 0xC3D2E1F0;
-                var A, B, C, D, E;
+                var w = new Array(80);
+                var h0 = 0x67452301;
+                var h1 = 0xEFCDAB89;
+                var h2 = 0x98BADCFE;
+                var h3 = 0x10325476;
+                var h4 = 0xC3D2E1F0;
+                var a, b, c, d, e;
                 var temp;
 
-                msg = Utf8Encode(msg);
+                msg = utf8Encode(msg);
 
-                var msg_len = msg.length;
+                var msgLen = msg.length;
 
-                var word_array = new Array();
-                for (i = 0; i < msg_len - 3; i += 4) {
+                var wordArray = new Array();
+                for (i = 0; i < msgLen - 3; i += 4) {
                     j = msg.charCodeAt(i) << 24 | msg.charCodeAt(i + 1) << 16 |
                         msg.charCodeAt(i + 2) << 8 | msg.charCodeAt(i + 3);
-                    word_array.push(j);
+                    wordArray.push(j);
                 }
 
-                switch (msg_len % 4) {
-                    case 0:
-                        i = 0x080000000;
-                        break;
-                    case 1:
-                        i = msg.charCodeAt(msg_len - 1) << 24 | 0x0800000;
-                        break;
-                    case 2:
-                        i = msg.charCodeAt(msg_len - 2) << 24 | msg.charCodeAt(msg_len - 1) << 16 | 0x08000;
-                        break;
-                    case 3:
-                        i = msg.charCodeAt(msg_len - 3) << 24 | msg.charCodeAt(msg_len - 2) << 16 | msg.charCodeAt(msg_len - 1) << 8 | 0x80;
-                        break;
+                switch (msgLen % 4) {
+                case 0:
+                    i = 0x080000000;
+                    break;
+                case 1:
+                    i = msg.charCodeAt(msgLen - 1) << 24 | 0x0800000;
+                    break;
+                case 2:
+                    i = msg.charCodeAt(msgLen - 2) << 24 | msg.charCodeAt(msgLen - 1) << 16 | 0x08000;
+                    break;
+                case 3:
+                    i = msg.charCodeAt(msgLen - 3) << 24 | msg.charCodeAt(msgLen - 2) << 16 | msg.charCodeAt(msgLen - 1) << 8 | 0x80;
+                    break;
                 }
 
-                word_array.push(i);
+                wordArray.push(i);
 
-                while ((word_array.length % 16) != 14) word_array.push(0);
+                while ((wordArray.length % 16) != 14) wordArray.push(0);
 
-                word_array.push(msg_len >>> 29);
-                word_array.push((msg_len << 3) & 0x0ffffffff);
+                wordArray.push(msgLen >>> 29);
+                wordArray.push((msgLen << 3) & 0x0ffffffff);
 
 
-                for (blockstart = 0; blockstart < word_array.length; blockstart += 16) {
+                for (blockstart = 0; blockstart < wordArray.length; blockstart += 16) {
 
-                    for (i = 0; i < 16; i++) W[i] = word_array[blockstart + i];
-                    for (i = 16; i <= 79; i++) W[i] = rotate_left(W[i - 3] ^ W[i - 8] ^ W[i - 14] ^ W[i - 16], 1);
+                    for (i = 0; i < 16; i++) w[i] = wordArray[blockstart + i];
+                    for (i = 16; i <= 79; i++) w[i] = rotateLeft(w[i - 3] ^ w[i - 8] ^ w[i - 14] ^ w[i - 16], 1);
 
-                    A = H0;
-                    B = H1;
-                    C = H2;
-                    D = H3;
-                    E = H4;
+                    a = h0;
+                    b = h1;
+                    c = h2;
+                    d = h3;
+                    e = h4;
 
                     for (i = 0; i <= 19; i++) {
-                        temp = (rotate_left(A, 5) + ((B & C) | (~B & D)) + E + W[i] + 0x5A827999) & 0x0ffffffff;
-                        E = D;
-                        D = C;
-                        C = rotate_left(B, 30);
-                        B = A;
-                        A = temp;
+                        temp = (rotateLeft(a, 5) + ((b & c) | (~b & d)) + e + w[i] + 0x5A827999) & 0x0ffffffff;
+                        e = d;
+                        d = c;
+                        c = rotateLeft(b, 30);
+                        b = a;
+                        a = temp;
                     }
 
                     for (i = 20; i <= 39; i++) {
-                        temp = (rotate_left(A, 5) + (B ^ C ^ D) + E + W[i] + 0x6ED9EBA1) & 0x0ffffffff;
-                        E = D;
-                        D = C;
-                        C = rotate_left(B, 30);
-                        B = A;
-                        A = temp;
+                        temp = (rotateLeft(a, 5) + (b ^ c ^ d) + e + w[i] + 0x6ED9EBA1) & 0x0ffffffff;
+                        e = d;
+                        d = c;
+                        c = rotateLeft(b, 30);
+                        b = a;
+                        a = temp;
                     }
 
                     for (i = 40; i <= 59; i++) {
-                        temp = (rotate_left(A, 5) + ((B & C) | (B & D) | (C & D)) + E + W[i] + 0x8F1BBCDC) & 0x0ffffffff;
-                        E = D;
-                        D = C;
-                        C = rotate_left(B, 30);
-                        B = A;
-                        A = temp;
+                        temp = (rotateLeft(a, 5) + ((b & c) | (b & d) | (c & d)) + e + w[i] + 0x8F1BBCDC) & 0x0ffffffff;
+                        e = d;
+                        d = c;
+                        c = rotateLeft(b, 30);
+                        b = a;
+                        a = temp;
                     }
 
                     for (i = 60; i <= 79; i++) {
-                        temp = (rotate_left(A, 5) + (B ^ C ^ D) + E + W[i] + 0xCA62C1D6) & 0x0ffffffff;
-                        E = D;
-                        D = C;
-                        C = rotate_left(B, 30);
-                        B = A;
-                        A = temp;
+                        temp = (rotateLeft(a, 5) + (b ^ c ^ d) + e + w[i] + 0xCA62C1D6) & 0x0ffffffff;
+                        e = d;
+                        d = c;
+                        c = rotateLeft(b, 30);
+                        b = a;
+                        a = temp;
                     }
 
-                    H0 = (H0 + A) & 0x0ffffffff;
-                    H1 = (H1 + B) & 0x0ffffffff;
-                    H2 = (H2 + C) & 0x0ffffffff;
-                    H3 = (H3 + D) & 0x0ffffffff;
-                    H4 = (H4 + E) & 0x0ffffffff;
+                    h0 = (h0 + a) & 0x0ffffffff;
+                    h1 = (h1 + b) & 0x0ffffffff;
+                    h2 = (h2 + c) & 0x0ffffffff;
+                    h3 = (h3 + d) & 0x0ffffffff;
+                    h4 = (h4 + e) & 0x0ffffffff;
 
                 }
 
-                var temp = cvt_hex(H0) + cvt_hex(H1) + cvt_hex(H2) + cvt_hex(H3) + cvt_hex(H4);
+                temp = cvtHex(h0) + cvtHex(h1) + cvtHex(h2) + cvtHex(h3) + cvtHex(h4);
 
                 return temp.toLowerCase();
 
             }
 
         </script>
+<!-- ReSharper restore UseOfImplicitGlobalInFunctionScope -->
 
     </div>
+    <!-- ReSharper restore UnknownCssClass -->
 </body>
 </html>
